# advent-of-code

./: README.md
aoc2023/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aoc2023/aoc_py/aoc1/: aoc1.py  aoc12.py
aoc2023/aoc_py/aoc10/: aoc10.py
aoc2023/aoc_py/aoc11/: aoc11.py
aoc2023/aoc_py/aoc12/: aoc12.py
aoc2023/aoc_py/aoc13/: aoc13.py
aoc2023/aoc_py/aoc14/: aoc14.py
aoc2023/aoc_py/aoc15/: aoc15.py
aoc2023/aoc_py/aoc2/: aoc2.py  aoc22.py
aoc2023/aoc_py/aoc3/: aoc3.py
aoc2023/aoc_py/aoc4/: aoc4.py
aoc2023/aoc_py/aoc5/: aoc5.py
aoc2023/aoc_py/aoc6/: aoc6.py
aoc2023/aoc_py/aoc7/: aoc7.py
aoc2023/aoc_py/aoc8/: aoc8.py
aoc2023/aoc_py/aoc9/: aoc9.py
